--- a/NOX/NOX.csproj
+++ b/NOX/NOX.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>netstandard2.1</TargetFramework>
     <AssemblyName>NOX</AssemblyName>
     <Product>NOX</Product>
-    <Version>0.1.3</Version>
+    <Version>0.1.4</Version>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <LangVersion>latest</LangVersion>
     <RestoreAdditionalProjectSources>
@@ -74,6 +74,11 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="assets\**" />
+  </ItemGroup>
+
 
   <Target Name="CleanUpOutputDirectory" AfterTargets="Build">
     <ItemGroup>
