--- a/NOX/NOX.csproj
+++ b/NOX/NOX.csproj
@@ -63,6 +63,9 @@
     <Reference Include="UnityEngine.UI">
       <HintPath>$(GameDirectory)/NuclearOption_Data/Managed/UnityEngine.UI.dll</HintPath>
     </Reference>
+    <Reference Include="UnityEngine.JSONSerializeModule">
+      <HintPath>$(GameDirectory)/NuclearOption_Data/Managed/UnityEngine.JSONSerializeModule.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
   <ItemGroup Condition="'$(TargetFramework.TrimEnd(`0123456789`))' == 'net'">
