--- a/NOX/NOX.csproj
+++ b/NOX/NOX.csproj
@@ -44,6 +44,7 @@
     <PackageReference Include="BepInEx.Core" Version="5.*" />
     <PackageReference Include="BepInEx.PluginInfoProps" Version="2.*" />
     <PackageReference Include="HarmonyX" Version="2.9.*" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
     <PackageReference Include="UnityEngine.Modules" Version="2022.3.6" IncludeAssets="compile" />
   </ItemGroup>
   
@@ -69,6 +70,9 @@
     <Reference Include="Unity.TextMeshPro">
       <HintPath>$(GameDirectory)/NuclearOption_Data/Managed/Unity.TextMeshPro.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.Speech">
+      <HintPath>/storage/steam/steamapps/compatdata/2168680/pfx/drive_c/Program Files/Microsoft SDKs/Speech/v11.0/Assembly/Microsoft.Speech.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
   <ItemGroup Condition="'$(TargetFramework.TrimEnd(`0123456789`))' == 'net'">
@@ -88,7 +92,7 @@
 
   <Target Name="CleanUpOutputDirectory" AfterTargets="Build">
     <ItemGroup>
-      <FilesToDelete Include="$(OutputPath)*.dll" Exclude="$(OutputPath)$(AssemblyName).dll" />
+      <FilesToDelete Include="$(OutputPath)*.dll" Exclude="$(OutputPath)$(AssemblyName).dll;$(OutputPath)Newtonsoft.Json.dll;$(OutputPath)Microsoft.Speech.dll" />
     </ItemGroup>
     <Delete Files="@(FilesToDelete)" />
   </Target>
